# -GeneticOptimization

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bounds.json  config.json  dataset.json  graph.json  postprocess.json  preprocess.json
configs/: bounds.json  config.json  dataset.json  preprocess.json
gtest/: gtest_compare.cc  gtest_filter_custom_addmultipledron.cc  gtest_filter_median_impl_2.cc  gtest_graph.cc  gtest_graph.h  gtest_graph_benchmark.cc  test_dataset.json  test_graph.json  test_graph_config.json  test_graph_postprocessing.json  test_preprocess.json
include/genetic/: case.h  data.h  genetic.h  geneticoperation.h  graph.h  loaddata.h  mainloop.h
src/: main.cc
src/genetic/: case.cc  data.cc  genetic.cc  geneticoperation.cc  graph.cc  loaddata.cc  mainloop.cc
src/utils/: configreader.cc  filelogger.cc
